# nempy

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  build_test_data.py  market_management_system.db  paper.bib  paper.md  price_comp.csv  pyproject.toml  pytest.ini  repopackpy-output.txt  requirements.txt  setup.py
benchmarking/: analyise_results.py  basslink_switchrun_2013_random_intervals.py  basslink_switchrun_2013_when_nemde_best_case_zero.py  basslink_switchrun_2021_random_intervals.py  basslink_switchrun_nemde_rhs_2013_random_intervals.py  basslink_switchrun_nemde_rhs_2021_random_intervals.py  benchmark_2013_before_fixes.py  benchmark_2013_fs_elastic.py  benchmark_2013_fs_rr_fix.py  benchmark_2021_before_fixes.py  benchmark_2021_fs_elastic.py  benchmark_2021_fs_rr_fix.py  benchmark_2023_ffr_random_intervals.py  bidirectional_units.py  bidirectional_units_2013.py  bidirectional_units_2021.py  pdc_plot.py
benchmarks/: all_features_example.py  energy_only_market.py
docs/: requirements.txt
examples/: all_features_example.py  all_features_example_except_basslink.py  basslink_switchrun.py  bidstack.py  example_two.py  full_feature_results  interconnector_constant_loss_percentage.py  interconnector_dynamic_losses.py  outputs.csv  performance_on_older_data.py  ramp_rates_and_loss_factors.py  recent_performance.py  recreating_historical_dispatch.py  recreating_historical_dispatch_with_fcas.py  simple FCAS markets.py  simple_FCAS_markets.py  time_sequential.py  two_units_bidding.py
nempy/: __init__.py  check.py  create_lhs.py  elastic_constraints.py  fcas_constraints.py  helper_functions.py  historical_input.db-journal  historical_inputs.py  historical_inputs_from_xml.py  historical_interconnectors.py  historical_market_builder.py  historical_spot_market_inputs.py  historical_unit_limits.py  input_preprocessing.py  interconnectors.py  market_constraints.py  markets.py  objective_function.py  solver_interface.py  the_database.db  time_sequential_mms_only.py  unit_constraints.py  variable_ids.py
tests/: historical_testing.py  (+42 more)
(+97 files in other folders)
