[project]
name = "nempy"
version = "3.0.3"
description="A flexible tool kit for modelling Australia's National Electricity Market dispatch procedure."
authors = [
    { name = "nick-gorman", email = "n.gorman305@gmail.com" },
]
dependencies = [
    "mip==1.16rc0",
    "pandas>=2.2.2",
    "xmltodict==0.12.0",
    "requests>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
dev-dependencies = [
    "Sphinx>=5.0.0",
    "autodocsumm>=0.2.11",
    "sphinx-rtd-theme>=1.3.0",
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
# path to tests for pytest
testpaths = ["src", "tests"]
# addopts = add options
addopts = "-ra --doctest-modules"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "kaleido==0.2.0",
    "plotly>=6.0.0",
]


